# tiny-json

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  test.py  tiny_json.py
src/tiny_json/: __init__.py  tiny_json.py
