[bdist_wheel]
universal = 1

[metadata]
name = tiny-json
version = 1.0
author = Greg  Silverman
author_email = silvermangb@gmail.com
description = Encode a JSON object to a small CSV string and decode that to the original JSON.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/tiny-json  # Add your project's URL here
license = MIT License

[options]
python_requires = >=2.7
zip_safe = False

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

